[package]
name = "neo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
#hyper = "0.14.22"
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
clap = { version = "3.2.20", features = ["derive","env"] }
colored = "2.0.0" 
anyhow = "1.0.66"
config = "0.13.1"
confy = "0.5.1"
toml = "0.5.6"